--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -13,7 +13,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -U black
       - name: Run black
-        run: black NezukoRobot
+        run: black SiestaRobot
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
